force-app/main/default/objects/Resource_Skill__c/Resource_Skill__c.object-meta.xml
<CustomObject>
    <label>Resource Skill</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Resource Skills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>