force-app/main/default/objects/Resource_Skill__c/fields/Date_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Receipt__c</fullName>
    <description>The Date of Receipt Certification field is used to record the exact date when a company or individual officially receives a certification confirming compliance with specific standards, requirements, or criteria.</description>
    <label>Date of Receipt</label>
    <type>Date</type>
</CustomField>