force-app/main/default/objects/Resource_Skill__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The exact date when a certification is set to expire. This field is essential for ensuring that certifications remain current and that renewal processes are managed effectively.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>