force-app/main/default/objects/Resource_Skill__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Field for entering a rating that allows values from 1 to 5, where 1 is the lowest rating and 5 is the highest. Used to assess quality, performance, of skill.</description>
    <inlineHelpText>Enter a skill rating from 1 to 5 range.</inlineHelpText>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>