force-app/main/default/objects/Resource_Skill__c/validationRules/Rating_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &lt;=  1 &amp;&amp;  Rating__c &gt;= 5</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating cannot be greater of 5 or less of 1</errorMessage>
</ValidationRule>